Fix WindowGatherers correctness, push propagation, and rewrite sliding/slidingTime windows